css/article-detail.css
@charset "UTF-8";

.comment-container textarea {
outline: none;
    resize: none;
}

.article-content ul {
list-style: disc;
    padding-left: 2em;
}

.article-content li {
list-style: disc;
}

.main {
width: 100%;
        margin: 0 auto 15px auto;
        overflow: hidden;
        padding-top: 60px;
}

.left-box {
width: 96%;
        margin: 0 2%;
        float: left;
}

.right-box {
width: 96%;
        margin: 0 2%;
        float: left;
}

#toc-a-on {
color: var(--text-link);
}

.toc {
position: fixed;
    top: 130px;
    right: 10px;
    width: 200px;
    max-height: 70vh;
    overflow-y: auto;
    font-size: 13px;
    background: var(--bg-card);
    border-radius: 10px;
    padding: 12px;
    box-shadow: var(--shadow-card);
    z-index: 50;
    transition: transform 0.3s ease;
    height: auto;
    overflow: hidden;
    margin: 20px 10px;
    padding: 20px;
    background-color: var(--bg-primary);
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.08);
    -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.08);
    box-sizing: border-box;
    overflow: hidden;
    transition: all 0.3s;
}

.toc:hover {
box-shadow: 0 0 10px var(--text-muted);
    -moz-box-shadow: 0 0 10px var(--text-muted);
}

.toc ul {
list-style-type: none;
    max-width: 100%;
    display: block;
    overflow: hidden;
}

.toc li {
list-style-type: none;
    line-height: 25px;
    width: 100%;
    display: block;
    overflow: hidden;
}

.toc li ul {
padding-left: 10px;
    max-width: 100%;
}

.toc a {
color: #1b1b1b;
    /*单行文本溢出显示省略号*/
    width: 100%;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    float: left;
    transition: ease-in-out 0.6s;
}

.toc li a:hover {
color: var(--text-link);
    text-decoration: underline;
}

/*左容器*/
.article-container {
width: 830px;
    margin: 20px auto;
    padding: 20px;
    background-color: var(--bg-primary);
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.08);
    -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.08);
    box-sizing: border-box;
    overflow: hidden;
    transition: all 0.3s;
}

.article-container:hover {
box-shadow: 0 0 10px var(--text-muted);
    -moz-box-shadow: 0 0 10px var(--text-muted);
}

.sort-box {
height: 40px;
    width: 100%;
    border-bottom: #eaeaea solid 1px;
    line-height: 40px;
}

.at-sort-s {
height: 40px;
    width: 60%;
    font-size: 18px;
    /*border-bottom: #eaeaea solid 1px;*/
}

.at-sort-a {
height: 40px;
    padding: 0 2px;
    display: inline-block;
    text-align: left;
    /*border-bottom: var(--text-link-hover) solid 2px;*/
    font-weight: bold;
}

.at-sort-comment-a {
height: 40px;
    padding: 0 2px;
    display: inline-block;
    text-align: left;
    border-bottom: var(--text-link) solid 2px;
    font-weight: bold;
}

.location {
line-height: 40px;
    width: 100%;
    /*border-bottom: #eaeaea solid 1px;*/
}

.at-sort-detail {
line-height: 40px;
    padding: 0 2px;
    display: inline-block;
    text-align: center;
    float: left;
    font-size: 16px;
}

.at-sort-detail a {
color: #2f332a;
    transition: all 0.3s ease-in-out;
    font-size: 16px;
}

.at-sort-detail a:hover {
color: var(--text-link-hover);
}

.article-content {
margin-top: 15px;
    width: 100%;
    font-size: 15px;
    line-height: 32px;
    border-bottom: #eaeaea solid 1px;
}

.article-content .infomation-list {
width: auto;
    height: auto;
    border-radius: 10px;
    background-color: rgb(255, 252, 235);
    color: var(--text-primary);
    padding: 2px 2px 2px 2px;
}

/*.article-content img {
display: block;
    max-width: 680px;
    max-height: 380px;
    margin: 10px auto;
}

*/

/*.article-content > p {
width: 100%;
    text-indent: 2em;
}

*/

/*.article-content p {
font-size: 15px;
    width: 100%;
    !*text-indent: 2em;*!
}

*/

/*右容器*/
.column-holder {
width: 300px;
    margin: 15px 10px 10px 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.08);
    -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.08);
    transition: ease-in-out background-color 0.3s;
}

.column-holder:hover {
box-shadow: 0 0 10px #7e8795;
    -moz-box-shadow: 0 0 10px #7e8795;
}

.column-holder ul,
li {
margin: 0;
    padding: 0;
    list-style: none;
    box-sizing: content-box;
}

.column_box {
width: 100%;
    background-color: var(--bg-card);
    border-radius: 10px;
    overflow: hidden;
}

.column_box .column-title {
width: 91%;
    height: 60px;
    padding-left: 9%;
    line-height: 60px;
    font-size: 16px;
    font-weight: 600;
    background-color: var(--border-light);
}

.column_box .column-category {
height: 50px;
    line-height: 50px;
    /*单行文本溢出显示省略号*/
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.column_box .column-category a {
width: 82%;
    margin: 0 9%;
    color: var(--text-muted);
    -webkit-transition: -webkit-transform 1s linear;
    -moz-transition: -moz-transform 1s linear;
    -o-transition: -o-transform 1s linear;
    -ms-transition: -ms-transform 1s linear;
}

.column_box .column-category a:hover {
color: var(--text-link);
}

.writer-info {
width: 100%;
    font-size: 16px;
    text-align: left;
    /*color: #98A6AD;*/
    /*margin: 0;*/
    color: #a6a6a6;
    /*border-bottom: #eaeaea solid 1px;*/
}

.writer-info #writer {
margin-left: 2px;
}

.writer-info>span {
height: 30px;
        margin: 5px 2px;
        display: inline-block;
        line-height: 30px;
}

.prev-next {
width: 100%;
    height: auto;
    margin-top: 10px;
}

.prev-next a {
max-width: 70%;
        float: left;
}

.prev-next div {
width: 100%;
    height: 50px;
    float: left;
}

.p-div {
text-align: left;
}

.n-div {
text-align: right;
}

.prev-next span {
float: left;
}

.prev-next a:hover {
color: var(--text-link);
    text-decoration: underline var(--text-link);
}

.prev-next #prev-a {
/*float: left;*/
}

.prev-next #next-a {
/*float: right;*/
}

.comment-container {
width: 100%;
        margin: 0;
        padding: 5px;
}
/* ... */

